# skape

./: ,skape.md  :w  Makefile  README.md  _config.yml  ab.out  banner.txt  forest.py  per.awk  pyproject.toml  skape.py  test_skape.py
etc/: banner.txt
